# data-centralization-platform

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
deployment/docker/init-scripts/: 01-init-db.sql
scripts/: cleanup.sh  setup.sh
src/: __init__.py
src/api/: __init__.py
src/connectors/: __init__.py
src/core/: __init__.py
