[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-centralization-platform"
version = "0.1.0"
description = "Enterprise Data Integration Platform - Secure, Scalable, Open-Core"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tiet Vinh Phu", email = "your.email@example.com"}
]
keywords = ["data", "etl", "integration", "platform", "dataops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",

    # Data Processing
    "pandas>=2.1.3",
    "polars>=0.19.0",
    "duckdb>=0.9.2",

    # Connectors
    "pymongo>=4.6.0",
    "redis>=5.0.1",
    "requests>=2.31.0",
    "httpx>=0.25.2",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.7",

    # Storage
    "minio>=7.2.0",
    "boto3>=1.34.0",

    # Messaging
    "pika>=1.3.2",
    "celery>=5.3.4",

    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "faker>=20.1.0",
    "httpx>=0.25.2",

    # Code Quality
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pylint>=3.0.3",

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",

    # Development
    "ipython>=8.18.1",
    "ipdb>=0.13.13",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/tietvinhphu/data-centralization-platform"
Documentation = "https://github.com/tietvinhphu/data-centralization-platform/docs"
Repository = "https://github.com/tietvinhphu/data-centralization-platform"
Issues = "https://github.com/tietvinhphu/data-centralization-platform/issues"

[project.scripts]
dfp = "src.cli.main:cli"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
